# oopv2

./: CMakeLists.txt  main.c  task5.c  task6.c  task7_1.c  task7_2.c
include/: Base.h  Interface.c  Interface.h  Messages.c  Messages.h  Object.c  Object.h  Utils.c  Utils.h
include/Base/: Definitions.h  Interface.h  Macros.h  Messages.h  Object.h
include/BigInt/: BigInt.h
include/DataStructs/: Array.h  BigInt.h  DList.h  SList.h  Tree.h
include/Interfaces/: IterableInterface.c  IterableInterface.h  StringerInterface.c  StringerInterface.h
include/Iterable/: Array.c  Array.h  DList.c  DList.h  SList.c  SList.h
include/Utils/: Search.h  Sort.h  Stuff.h
src/Base/: Interface.c  Messages.c  Object.c
src/BigInt/: BigInt.c
src/DataStructs/: Array.c  BigInt.c  DList.c  SList.c  Tree.c
src/Interfaces/: StringerInterface.c
src/Iterable/: Array.c  DList.c  SList.c
src/Utils/: Search.c  Sort.c  Stuff.c
